--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,9 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeWork">
         <activity
+            android:name=".HW15Activity"
+            android:exported="false" />
+        <activity
             android:name=".HW14Activity"
             android:exported="false" />
         <activity
