--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,10 +9,13 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HomeWork">
-      <activity          
+        <activity
+            android:name=".hw19.HW19Activity"
+            android:exported="false" />
+        <activity
             android:name=".hw18.HW18Activity"
             android:exported="false" />
-        <activity          
+        <activity
             android:name=".HW17Activity"
             android:exported="false" />
         <activity
