--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,9 +28,8 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
-    buildFeatures {
-        viewBinding  true
-    }
+    buildFeatures.viewBinding=true
+
 }
 
 dependencies {
